<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_popularity"
        android:orderInCategory="100"
        android:title="@string/action_popularity"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_top_rated"
        android:orderInCategory="100"
        android:title="@string/action_top_rated"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favourites"
        android:orderInCategory="100"
        android:title="@string/favourtite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

</menu>