<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true">

            <com.nanodegree.tejomai.popularmovies.views.SquareImageView
                android:id="@+id/thumbnail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/activity_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.nanodegree.tejomai.popularmovies.ui.MovieDetailActivity"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <com.nanodegree.tejomai.popularmovies.views.SquareImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/detail_image_margin_bottom"
                android:layout_weight="4"
                android:visibility="gone"/>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/star"
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_height"
                android:layout_marginRight="@dimen/star_right_margin"
                android:layout_alignParentTop="true"
                android:src="@drawable/star_selected"/>


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_title_text_size"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/star"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/detail_title_margin_bottom"/>

</RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/title_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/title_release_date"
                        android:layout_marginLeft="@dimen/detail_text_margin_left"
                        android:layout_weight="1"
                        android:text="date"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/title_vote"
                        android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/title_release_date"
                            android:layout_alignParentLeft="true"
                            android:text="@string/rating"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/vote"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/detail_text_margin_left"
                            android:layout_toRightOf="@id/title_vote"
                            android:layout_below="@id/title_release_date"
                            android:text="vote"
                            android:textColor="@color/white"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_vote"
                        android:layout_marginTop="@dimen/trailer_top_margin"
                        android:layout_alignParentLeft="true">

                    <TextView
                        android:id="@+id/trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trailer"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <ProgressBar
                            android:id="@+id/trailer_progress"
                            android:layout_width="@dimen/trailer_image_size"
                            android:layout_height="@dimen/trailer_image_size"
                        android:layout_marginLeft="@dimen/trailer_image_left_margin"
                            android:indeterminate="true"/>

                    <ImageView
                        android:id="@+id/trailer_play"
                        android:layout_width="@dimen/trailer_image_size"
                        android:layout_height="@dimen/trailer_image_size"
                        android:layout_toRightOf="@id/trailer"
                        android:src="@drawable/play"
                        android:layout_marginLeft="@dimen/trailer_image_left_margin"
                        android:visibility="gone"
                        android:layout_below="@id/title_vote"/>

                    <ImageView
                        android:id="@+id/trailer_share"
                        android:layout_width="@dimen/trailer_image_size"
                        android:layout_height="@dimen/trailer_image_size"
                        android:src="@drawable/share"
                        android:visibility="gone"
                        android:layout_toRightOf="@id/trailer_play"
                        android:layout_marginLeft="@dimen/trailer_image_left_margin"
                        android:layout_below="@id/title_vote"/>
                    </LinearLayout>

            </RelativeLayout>


<!--
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <ImageView
                        android:id="@+id/trailer_image"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/trailer_top_margin"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"/>

                    <ProgressBar
                        android:id="@+id/trailer_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="2">
                        <Button
                            android:id="@+id/trailer_play_image"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="top"
                            android:layout_weight="1"
                            android:alpha="0.7"
                            android:visibility="invisible"/>

                        <ImageView
                            android:id="@+id/trailer_share"
                            android:layout_width="40dp"
                            android:layout_height="0dp"
                            android:layout_gravity="top"
                            android:layout_weight="1"
                            android:src="@drawable/share"
                            android:alpha="0.7"
                            android:visibility="visible"/>

                    </LinearLayout>

                </FrameLayout>


-->
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_separator_height"
                android:layout_marginTop="@dimen/line_separator_top_margin"
                android:layout_marginLeft="@dimen/line_separator_left_margin"
                android:layout_marginRight="@dimen/line_separator_right_margin"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/title_overview"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/detail_summary_title_margin_bottom"
                android:layout_marginTop="@dimen/detail_summary_title_margin_top"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_summary_title_text_size"
                android:textStyle="bold"
                android:text="@string/title_overview"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/detail_summary_margin_bottom"
                android:layout_marginTop="@dimen/detail_summary_margin_top"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_separator_height"
                android:layout_marginLeft="@dimen/line_separator_left_margin"
                android:layout_marginRight="@dimen/line_separator_right_margin"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/title_reviews"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/detail_summary_title_margin_bottom"
                android:layout_marginTop="@dimen/detail_summary_title_margin_top"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_summary_title_text_size"
                android:textStyle="bold"
                android:text="@string/title_reviews"
                android:textColor="@color/white"
                />

            <ProgressBar
            android:id="@+id/reviews_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fillViewport="true">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>